NewFlameHM/force-app/main/default/objects/Menu_Meal_Setup__c/Menu_Meal_Setup__c.object-meta.xml
<CustomObject>
    <label>Menu Meal Setup</label>
    <nameField>
        <displayFormat>MMS-{0000}</displayFormat>
        <label>Menu Meal Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Menu Meal Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>