NewFlameHM/force-app/main/default/objects/Menu_Meal_Setup__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(Menu_Item__r.Category__c)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>