NewFlameHM/force-app/main/default/objects/Menu_Meal_Setup__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <formula>TEXT(Menu_Item__r.Meal_Type__c)</formula>
    <label>Meal Type</label>
    <type>Text</type>
</CustomField>