NewFlameHM/force-app/main/default/objects/Menu_Meal_Setup__c/fields/Menu_Id__c.field-meta.xml
<CustomField>
    <fullName>Menu_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Id</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Menu Meal Setups</relationshipLabel>
    <relationshipName>Menu_Meal_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>