NewFlameHM/force-app/main/default/objects/Menu_Meal_Setup__c/fields/Menu_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item_Name__c</fullName>
    <formula>Menu_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Menu Item Name</label>
    <type>Text</type>
</CustomField>